--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   grid-template-columns: auto auto;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   background-color: #2c2d2d;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -60,12 +60,7 @@ body {
 .productsWrapper img {
   width: 100%;
 }
-.productsWrapper img:hover {
-  transform: scale(1.2);
-  transition: 1s ease;
-  z-index: -1;
-  cursor: zoom-in;
-}
+
 
 .relatedProductsWrapper{
   display: grid;
@@ -77,12 +72,7 @@ body {
 .relatedProductsWrapper img {
   width: 100%;
 }
-.relatedProductsWrapper img:hover {
-  transform: scale(1.2);
-  transition: 1s ease;
-  z-index: -1;
-  cursor: zoom-in;
-}
+
 
 
 #relatedProductsH1{
@@ -133,22 +123,9 @@ h1 {
   transition: 1s ease;
 }
 
-#tree {
-  position: absolute;
-  font-family: Tahoma, sans-serif;
-  left: 4em;
-  top: 5em;
-  background-color: #2c2d2d;
-  padding: 1em 0 0 1.1em;
-  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
-  height: 34em;
-  width: 19em;
-}
 
-#spaceCategory {
-  height: 0.2em;
-  color: transparent;
-}
+
+
 
 .sideMenu {
   color: silver;
@@ -237,7 +214,7 @@ h1 {
 }
 
 #productDetailWrapper {
-  z-index: 1;
+  
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 7em;
   margin-bottom: 2em;
@@ -271,13 +248,7 @@ h1 {
 #FIGURE{
   grid-area: FIGURE;
 }
-  #IMAGE_SRC:hover{ 
-    z-index: -1;
-  transform: scale(1.5);
-  transition: 1s ;
-  cursor: zoom-in;
-
-}
+  
 #PRODUCT_NAME{
   grid-area: PRODUCT_NAME;
 font-size: 1.5em;
@@ -545,4 +516,182 @@ footer #copy {
     display: block;
     text-align: left;
   }
+}
+
+
+/*#tree {
+  position: absolute;
+  font-family: Tahoma, sans-serif;
+  left: 4em;
+  top: 5em;
+  background-color: #2c2d2d;
+  padding: 1em 0 0 1.1em;
+  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
+  height: 34em;
+  width: 19em;
+}*/
+
+
+/** Category Tree*/
+.navigation {
+z-index: 1;
+  box-sizing: border-box;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  line-height: 1;
+  left: 4em;
+  top: 6em;   
+  
+}
+
+
+  
+
+
+.navigation ul,
+.navigation ul li,
+.navigation ul ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.navigation ul {
+  position: relative;
+  z-index: 500;
+  float: left;
+  
+}
+.navigation ul li {
+  float: left;
+  min-height: 0.05em;
+  line-height: 0.5em;
+  vertical-align: middle;
+  position: relative;
+}
+.navigation ul li.hover,
+.navigation ul li:hover {
+  position: relative;
+  z-index: 510;
+  cursor: default;
+}
+.navigation ul ul {
+  visibility: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  z-index: 520;
+  width: 100%;
+}
+.navigation ul ul li { float: none; }
+.navigation ul ul ul {
+  top: 0;
+  right: 0;
+}
+.navigation ul li:hover > ul { visibility: visible; }
+.navigation ul ul {
+  top: 0;
+  left: 99%;
+}
+.navigation ul li { float: none; }
+.navigation ul ul { margin-top: 0.05em; }
+.navigation {
+  width: 19.8em;
+  background: #2c2d2d;
+  font-family: 'roboto', Tahoma, Arial, sans-serif;
+  
+  
+}
+.navigation:before {
+  content: '';
+  display: block;
+}
+.navigation:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.navigation a {
+  display: block;
+  padding: 1em 1.3em;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.navigation > ul { width: 20.01em; }
+.navigation ul ul { width: 20em; }
+.navigation > ul > li > a {
+  
+  color: silver;
+}
+.navigation > ul > li > a:hover { color: gold }
+.navigation > ul > li a:hover,
+.navigation > ul > li:hover a { background: #4a4b4b }
+.navigation li { position: relative; }
+.navigation ul li.has-sub > a:after {
+  content: '>>';
+  position: absolute;
+  right: 1em;
+}
+.navigation ul ul li.first {
+  -webkit-border-radius: 0 3px 0 0;
+  -moz-border-radius: 0 3px 0 0;
+  border-radius: 0 3px 0 0;
+}
+.navigation ul ul li.last {
+  -webkit-border-radius: 0 0 3px 0;
+  -moz-border-radius: 0 0 3px 0;
+  border-radius: 0 0 3px 0;
+  border-bottom: 0;
+}
+.navigation ul ul {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+}
+.navigation ul ul { border: 1px solid  }
+.navigation ul ul a { color: #ffffff; }
+.navigation ul ul a:hover { color: black; }
+.navigation ul ul li { border-bottom: 1px solid rgb(170, 170, 170); }
+.navigation ul ul li:hover > a {
+  background:  #4a4b4b;
+  color: gold;
+}
+.navigation.align-right > ul > li > a {
+  border-left: 0.3em solid silver;
+  border-right: none;
+}
+.navigation.align-right { float: right; }
+.navigation.align-right li { text-align: right; }
+.navigation.align-right ul li.has-sub > a:before {
+  content: '+';
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  margin-top: -6px;
+}
+.navigation.align-right ul li.has-sub > a:after { content: none; }
+.navigation.align-right ul ul {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  z-index: 598;
+  width: 100%;
+}
+.navigation.align-right ul ul li.first {
+  -webkit-border-radius: 3px 0 0 0;
+  -moz-border-radius: 3px 0 0 0;
+  border-radius: 3px 0 0 0;
+}
+.navigation.align-right ul ul li.last {
+  -webkit-border-radius: 0 0 0 3px;
+  -moz-border-radius: 0 0 0 3px;
+  border-radius: 0 0 0 3px;
+}
+.navigation.align-right ul ul {
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
 }
