--- a/style.css
+++ b/style.css
@@ -91,11 +91,7 @@ body {
   background:linear-gradient(rgb(202, 202, 202), rgb(230, 230, 230));
 }
 
-  
-  
-
-
-#relatedProductsH1 strong{
+  #relatedProductsH1 strong{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: x-large;
   margin: 0.5em;
@@ -475,18 +471,135 @@ footer #copy {
   font-size: 0.8em;
 }
 
-@media only screen and (max-width: 1600px) {
-  #wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 0.5em;
-    margin: 39em 5% 0 5%;
-  }
+#TopMenuMobil{
+  display: none;
 }
 
-@media only screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+@media only screen and (max-width: 1600px) {
+  .productsWrapper {    
+    margin: 38.7em 5% 0 5%;
+  }
+  #mainBanner {
+    top: 4.7em;    
+  }
+
+  
+}
+
+@media only screen and (max-width: 1566px) {
+  .productsWrapper {grid-template-columns: 1fr 1fr 1fr 1fr; margin: 38.7em 5% 0 5%; }
+  #mainBanner {top: 4.7em;}
+  #navFlexRight { display: none;}
+
+  #TopMenu{
     display: none;
+  }
+  
+   #TopMenuMobil {
+    display: grid;
+    grid-template-areas:
+     'logo nav find findButton basket user burger';
+     grid-template-columns: 0.2fr 0.2fr 0.4fr 0.1fr 0.1fr 0.1fr 0.1fr  ;
+     padding-top:0.5em ;
+     padding-bottom: 0.5em;
+     justify-items: center;
+
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  background-color: #2c2d2d;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#logoMobil{
+  grid-area: logo;  
+width: 240px;
+
+}
+
+#menuLeftMobil{
+  grid-area: nav ;
+  margin: auto;
+}
+
+
+#topNavBasketIconMobil{
+  grid-area: basket;
+  margin: auto;
+}
+#userMobil{
+  grid-area: user;
+  margin: auto;
+}
+
+#menuRightMobil{
+  grid-area: burger;
+  margin: auto;
+
+}
+
+#searchMobil{
+  grid-area: find;
+  width: 100%;
+  height: 80%;
+  margin: auto;
+}
+
+#findMobil{
+  grid-area: findButton;
+  width: 100%;
+  height: 80%;
+  margin: auto;
+}
+
+.navigation{
+  display: none;
+}
+
+.topnavWithoutLogoMobil {
+  color: silver;
+  text-align: center;
+  
+  
+  font-size: 1.2em;
+  font-weight: 600;
+}
+     
+  } 
+  
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 900px) {
+  
+  .productsWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0.5em;
+    margin: 4em 5% 0 5%;
+  }
+
+
+
+  .topnavWithoutLogo {
+   
+   
+    padding: 1.3em 1em 1em 1em;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 600;
+  }
+
+
+
+
   }
   .topnav a.icon {
     float: right;
@@ -516,20 +629,10 @@ footer #copy {
     display: block;
     text-align: left;
   }
-}
 
 
-/*#tree {
-  position: absolute;
-  font-family: Tahoma, sans-serif;
-  left: 4em;
-  top: 5em;
-  background-color: #2c2d2d;
-  padding: 1em 0 0 1.1em;
-  clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
-  height: 34em;
-  width: 19em;
-}*/
+
+
 
 
 /** Category Tree*/
@@ -588,7 +691,7 @@ z-index: 1;
   visibility: hidden;
   position: absolute;
   top: 100%;
-  left: 0px;
+  left: 0;
   z-index: 520;
   width: 100%;
 }
@@ -627,7 +730,7 @@ z-index: 1;
   text-decoration: none;
   text-transform: uppercase;
 }
-.navigation > ul { width: 20.01em; }
+.navigation > ul { width: 20em; }
 .navigation ul ul { width: 20em; }
 .navigation > ul > li > a {
   
