--- a/style.css
+++ b/style.css
@@ -227,9 +227,10 @@ h1 {
     "FIGURE BASKET INPUT INPUT"
     "DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION ";
     grid-template-columns: 1fr 0.2fr 0.7fr 0.1fr ;
+    
     border-top:10px solid gold;
     padding: 1em;
-    width: 60%;
+    width: 50%;
     top: 10em;
     background-color: white;
     clip-path: polygon(0 0, 100% 0, 100% 94%, 50% 100%, 0 94%);
@@ -238,8 +239,10 @@ h1 {
 #IMAGE_SRC{ 
   grid-area: IMAGE_SRC;
   width: 100%;
+  
   padding-right: 1em;
   padding-bottom: 1em;
+  
 }
 
 #FIGURE{
@@ -257,9 +260,9 @@ font-weight: 600;
 
 }
 #AVAILABILITY{
-  grid-area: AVAILABILITY;
+grid-area: AVAILABILITY;
 background-color: rgb(33, 33, 33);
-width: 20%;
+width: 30%;
 margin: 1em 0 1em 0;
 padding: 0.2em;
 text-align: center;
@@ -392,8 +395,8 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 #newsLatterFormularWrapper {
-  display: grid;
-  grid-template-columns: 1fr 0.5fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 25em;
   background-color: rgba(167, 162, 153, 0.568);
@@ -403,21 +406,22 @@ input[type=number]::-webkit-inner-spin-button {
 #newsLatterFormular {
   display: flex;
   justify-content: center;
+  margin: auto;
 }
 
 #newsLatterFormularInput {
-  width: 40em;
-  height: 5em;
+width: 260px;
+  height: 4em;
   border: none;
   margin: auto 0 auto 0;
 }
 #newsLatterFormularButton {
-  height: 2.1em;
-  width: 4.5em;
+  height: 2.3em;
+  width: 90px;
   border: none;
   margin: auto 0 auto 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
   background-color: #2c2d2d;
   color: silver;
 }
@@ -430,10 +434,10 @@ input[type=number]::-webkit-inner-spin-button {
 
 #newsLatterText {
   display: flex;
-  justify-content: center;
+  text-align: center;
   margin: auto;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 3em;
+  font-size: 2em;
   padding: 0.1em;
 }
 
@@ -441,7 +445,8 @@ input[type=number]::-webkit-inner-spin-button {
   display: flex;
   justify-content: center;
   margin: auto;
-  width: 50%;
+  width: 10%;
+  min-width: 100px;
 }
 
 .foot {
@@ -476,168 +481,9 @@ footer #copy {
   display: none;
 }
 
-@media only screen and (max-width: 1771px) {
-  .productsWrapper {    
-    margin: 6.2em 5% 0 5%;
-  }
-  #mainBanner {top: 4.7em;}
-
-  #productDetailWrapper {
-
-    width: 80%;
-    margin: auto;
-  }
-  
-}
-
-@media only screen and (max-width: 1566px) {
-  .productsWrapper {grid-template-columns: 1fr 1fr 1fr 1fr; margin: 5em 5% 0 5%; }
-  
-  #navFlexRight { display: none;}
-
-  #TopMenu{
-    display: none;
-  }
-  
-   #TopMenuMobil {
-    display: flex;
-    flex-wrap: wrap;
-    
-     padding-top:0.5em ;
-     padding-bottom: 0.5em;
-     justify-content: center;
-
-  position: fixed;
-  top: 0;
-  z-index: 2;
-  width: 100%;
-  background-color: #2c2d2d;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#logoMobil{
- 
-width: 240px;
-
-}
-
-#menuLeftMobil{
-  
-  width: 5%;
-  min-width: 60px;
-  margin: auto;
-}
-
-
-#topNavBasketIconMobil{
-  
-  margin: auto;
-  width: 5%;
-  min-width: 60px;
-}
-#userMobil{
-  
-  margin: auto;
-  width: 5%;
-  min-width: 60px;
-}
-
-#menuRightMobil{
-  min-width: 60px;
-  margin: auto;
-  width: 5%;
-
-}
-
-#searchMobil{
-  margin: 0;
- 
-  width: 40%;
-  min-width: 320px;
-  height: 100%;
-  font-size: 2em;
-  padding: 0.3em;  
-}
-
-#inputSearchMobil{
-font-size: 1.2em;
-width: 80%;
-float: left;
-}
-
-#findMobil{
-  width: 15%;
- margin: 0;
-}
-
-.navigation{
-  display: none;
-}
-
-.topnavWithoutLogoMobil {
-  color: silver;
-  text-align: center;
-  
-  
-  font-size: 1.2em;
-  font-weight: 600;
-}
-     
-  } 
-  
-@media only screen and (max-width: 900px) {
-  
-  .productsWrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 0.5em;
-    margin:5em 1% 0 1%;
-  }
 
 
 
-  
-
-
-
-
-  }
-
-  @media only screen and (max-width: 600px) {
-  
-    .productsWrapper {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 0.5em;
-      margin: 5em 1% 0 1%;
-    }
-  
-  
-  
-    
-  
-  
-  
-  
-    }
-
-  @media only screen and (max-width: 500px) {
-  
-    .productsWrapper {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 0.5em;
-      margin: 5em 1% 0 1%;
-    }
-  
-  
-  
-    
-  
-  
-  
-  
-    }
   .topnav a.icon {
     float: right;
     display: block;
@@ -842,4 +688,266 @@ z-index: 1;
   -webkit-border-radius: 3px 0 0 3px;
   -moz-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
+}
+
+@media only screen and (max-width: 1771px) {
+  .productsWrapper {    
+    margin: 6.2em 5% 0 5%;
+  }
+  #mainBanner {top: 4.7em;}
+
+  #productDetailWrapper {
+    width: 50%;
+    margin: auto;
+    
+  }
+
+#topNavBasketIconMobil{
+  
+  margin: auto;
+  width: 5%;
+  min-width: 60px;
+  
+}
+#userMobil{
+  
+  margin: auto;
+  width: 5%;
+  min-width: 60px;
+}
+
+#menuRightMobil{
+ 
+  margin: auto;
+  width: 5%;
+  min-width: 60px;
+
+}
+  
+}
+
+@media only screen and (max-width: 1566px) {
+  
+  
+  .productsWrapper {grid-template-columns: 1fr 1fr 1fr 1fr; margin: 5em 5% 0 5%; }
+  
+  #navFlexRight { display: none;}
+
+  #TopMenu{
+    display: none;
+  }
+  
+   #TopMenuMobil {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+     padding-top:0.5em ;
+     padding-bottom: 0.5em;
+     
+
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  background-color: #2c2d2d;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#logoMobil{
+ 
+width: 240px;
+margin-right: 20px;
+
+}
+
+#menuLeftMobil{
+  
+  width: 5%;
+  min-width: 60px;
+  float: left;
+  margin-right: 5%;
+  margin-top: auto;
+  margin-bottom: auto;
+  
+}
+
+
+
+
+#searchMobil{
+  margin: 0;
+  width: 40%;
+  min-width: 359px;
+  height: 100%;
+  font-size: 2em;
+  padding: 0.3em;  
+}
+
+#inputSearchMobil{
+font-size: 1.2em;
+width: 80%;
+float: left;
+}
+
+#findMobil{
+  width: 55px;
+  height: 48px;
+ margin: auto;
+}
+
+.navigation{
+  display: none;
+}
+
+.topnavWithoutLogoMobil {
+  color: silver;
+  text-align: center;
+  
+  
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+#iconsInMenuRight{
+  display: flex;
+  min-width: 340px;
+  justify-content: center;
+
+ }
+
+ #freeDelivery{
+grid-area: FIGURE;
+    
+}
+
+ #productDetailWrapper {
+  
+  
+  
+   margin: 7em auto 2em auto;
+   
+    display: grid;
+  grid-template-areas:
+    "PRODUCT_NAME PRODUCT_NAME PRODUCT_NAME PRODUCT_NAME "
+    "IMAGE_SRC IMAGE_SRC IMAGE_SRC IMAGE_SRC "
+    " AVAILABILITY AVAILABILITY AVAILABILITY AVAILABILITY "
+     "PRICE PRICE PRICE PRICE "
+     "PRICE_WITH_VAT PRICE_WITH_VAT PRICE_WITH_VAT PRICE_WITH_VAT  "
+    "FIGURE FIGURE FIGURE FIGURE "
+     "BASKET INPUT INPUT INPUT "
+    "DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION  ";
+    
+    
+    border-top:10px solid gold;
+    padding: 1em;
+    width: 50%;
+    min-width: 350px;
+    
+}
+
+.relatedProductsWrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 0.5em;
+  margin: 1em ;
+}
+ 
+.relatedProductsWrapper{
+      
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-gap: 0.5em;
+  margin: 0.5em ;
+}
+
+
+  
+@media only screen and (max-width: 900px) {
+
+  #mainBanner {
+
+    top: 7.5em
+  }
+  #productDetailWrapper{
+    width: 80%;
+    margin-top: 10em;
+
+  }
+  .productsWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0.5em;
+    margin:7em 1% 0 1%;
+
+  }
+  .relatedProductsWrapper{
+      
+    grid-template-columns: 1fr 1fr 1fr  ;
+    grid-gap: 0.5em;
+    margin: 0.5em ;
+  }
+
+  }
+
+  @media only screen and (max-width: 600px) {
+
+
+    #mainBanner {
+
+      top: 9em;
+    }
+    #productDetailWrapper{
+      width: 80%;
+      margin-top: 10em;
+
+    }
+  
+    .productsWrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 0.5em;
+      margin: 10em 1% 0 1%;
+      
+    }
+    .relatedProductsWrapper{
+      
+      grid-template-columns: 1fr 1fr  ;
+      grid-gap: 0.5em;
+      margin: 0.5em ;
+    }
+  
+    }
+
+  @media only screen and (max-width: 500px) {
+  
+    .productsWrapper {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 0.5em;
+      margin: 10em 1% 0 1%;
+    }
+  
+    #mainBanner {
+
+      top: 10em;
+    }
+   #logoMobil{
+    
+    width: 150px;
+     
+      
+  
+    }
+
+    #productDetailWrapper {
+  
+     margin: 11em 1em 1em auto;
+    }
+
+    .relatedProductsWrapper{
+      
+      grid-template-columns: 1fr   ;
+      grid-gap: 0.5em;
+      margin: 0.5em ;
+    }
+  }
 }
